--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>Eyad Kobatte</title>
 
         <!-- Bootstrap core CSS -->
         <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -37,18 +37,18 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav" id="navbar">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#about">About Me</a>
+                        <a class="nav-link js-scroll-trigger" href="#about" id="aboutMeNav">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+                        <a class="nav-link js-scroll-trigger" href="#education" id="educationNav">Education</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+                        <a class="nav-link js-scroll-trigger" href="#skills" id="skillsNav">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+                        <a class="nav-link js-scroll-trigger" href="#projects" id="projectsNav">Projects</a>
                     </li>
                 </ul>
             </div>
